--- a/WindowsApplication2/App.config
+++ b/WindowsApplication2/App.config
@@ -1,17 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Vegatronix.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Vegatronix.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Vegatronix.My.MySettings.FOS_Project_DatabaseConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\FOS-Project Database.mdb&quot;"
-            providerName="System.Data.OleDb" />
+        <add name="Vegatronix.My.MySettings.FOS_Project_DatabaseConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\FOS-Project Database.mdb&quot;" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <Vegatronix.My.MySettings>
@@ -19,7 +17,7 @@
                 <value>XYZ-ABC-456-STA</value>
             </setting>
             <setting name="Business_Name" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Admin_Exists" serializeAs="String">
                 <value>False</value>
